# amp-core

./: .clocignore  .gitmodules  CMakeLists.txt  README.md
alsa-mock/: README.md
alsa-mock/include/alsa/: asoundlib.h
alsa-mock/src/: asoundlib.c
clips/: clip_0.raw  clip_0_end.raw  clip_1.raw  clip_1_end.raw  clip_2.raw  clip_2_end.raw  clip_3.raw  clip_3_end.raw  clip_4.raw  clip_4_end.raw  clip_5.raw  clip_5_end.raw  clip_6.raw  clip_6_end.raw  clip_7.raw  clip_7_end.raw  clip_8.raw  clip_8_end.raw  clip_9.raw  clip_9_end.raw  clip_calling_node.raw  clip_connected.raw  clip_dot.raw  clip_node.raw  clip_not_connected.raw  clip_welcome_to_ampersand.raw  convert.sh  resource_amp_core_clips_clip_0_end_raw.c  resource_amp_core_clips_clip_0_raw.c  resource_amp_core_clips_clip_1_end_raw.c  resource_amp_core_clips_clip_1_raw.c  resource_amp_core_clips_clip_2_end_raw.c  resource_amp_core_clips_clip_2_raw.c  resource_amp_core_clips_clip_3_end_raw.c  resource_amp_core_clips_clip_3_raw.c  resource_amp_core_clips_clip_4_end_raw.c  resource_amp_core_clips_clip_4_raw.c  resource_amp_core_clips_clip_5_end_raw.c  resource_amp_core_clips_clip_5_raw.c  resource_amp_core_clips_clip_6_end_raw.c  (+13 more)
include/amp/: Ampersand.h  CYW43Task.h  Resampler.h  RetransmissionBuffer.h  RetransmissionBufferStd.h  SequencingBuffer.h  SequencingBufferStd.h
python/: evaluate-filter-1.py  evaluate-filter-2.py  iax.py  make-filter-5.py  make-filter-6.py  open-test.py  test-cgnat-1.py  test-cgnat-2.py
src/: AdaptorIn.cpp  AdaptorIn.h  AdaptorOut.cpp  AdaptorOut.h  AlwaysTask.h  Bridge.cpp  Bridge.h  Bridge2.cpp  BridgeCall.cpp  BridgeCall.h  BridgeIn.cpp  BridgeIn.h  BridgeOut.cpp  BridgeOut.h  Config.cpp  Config.h  ConfigPoller.cpp  ConfigPoller.h  EventLoop.cpp  EventLoop.h  IAX2FrameFull.cpp  IAX2FrameFull.h  IAX2Util.cpp  IAX2Util.h  KerchunkFilter.cpp  KerchunkFilter.h  Line.cpp  Line.h  LineIAX2.cpp  LineIAX2.h  LineIAX2_base.cpp  LineParrot.cpp  LineParrot.h  LineRadio.cpp  LineRadio.h  LineSDRC.cpp  LineSDRC.h  LineUsb.cpp  LineUsb.h  LineUsb2.cpp  (+79 more)
src/demos/: Analyzer.cpp  Analyzer.h  hello-ed25519.cpp  hello-poker-async.cpp  hello-poker.cpp  hello-usb-serial.cpp  main-local-parrot.cpp  main-qual-1.cpp  nr-log.cpp  res-test.cpp  sa818-config.cpp  signal-1.cpp  usb-1.cpp  usb-2.cpp  white-noise.cpp
src/pico/: PicoEventLoop.cpp  PicoEventLoop.h
src/radio/: RxMgr.cpp  RxMgr.h  TxMgr.cpp  TxMgr.h
src/tests/: LocalRegistryStd.h  TestAudioGenerator.cpp  TestAudioGenerator.h  TestConsumer.h  TestUtil.cpp  TestUtil.h  audio-test-1.cpp  audio-test-2.cpp  bridge-test-1.cpp  codec-assignment-test.cpp  config-test.cpp  dsp_util.cpp  dsp_util.h  dtmf-test-1.cpp  hello-json-1.cpp  hello-libcurl-1.cpp  hello-libcurl-2.cpp  hello-usb.c  ini-test-1.cpp  ini-test-1.ini  ini-test-2.cpp  load-client-1.cpp  load-server-1.cpp  manager-test-1.cpp  mixer-test-1.cpp  node-test-1.cpp  program-test-1.cpp  protocol-test-1.cpp  register-test-1.cpp  retx-test.cpp  seq-test-1.cpp  seq-test-2.cpp  stats-test-1.cpp  tone-test-1.cpp  tone-test-2.cpp  trace-log.cpp  unit-test.cpp  voter-test-2.cpp  voter-test.cpp
src/voter/: LineVoter.cpp  LineVoter.h  VoterClient.cpp  VoterClient.h  VoterPeer.cpp  VoterPeer.h  VoterUtil.cpp  VoterUtil.h
www/: config.html  form-utils.js  index.html  log.html  main.css
